Fix map clipping into header

--- a/public_src/components/app/app.component.less
+++ b/public_src/components/app/app.component.less
@@ -5,7 +5,7 @@ body {
 
 #map {
     position:absolute;
-    top:0;
+    top:60px;
     bottom:0;
     width:100%;
 }
